(lang dune 2.8)

(name globlon)

(generate_opam_files true)

(source
 (github bleepbloopisfy/globlon))

(license MIT)

(authors "bleepbloopisfy")

(maintainers "bleepbloopisfy")

(package
 (name globlon)
 (synopsis "A globbing library for OCaml")
 (description "A globbing library for OCaml. We use it to match file paths against patterns.")
 (depends))
